--- a/css/main.css
+++ b/css/main.css
@@ -272,7 +272,7 @@ header {
 }
 
 .advantages-list .item {
-  width: calc((100%-90px) / 4);
+  width: calc((100% - 90px) / 4);
 }
 
 .advantages-list .item:not(:last-child) {
@@ -336,8 +336,8 @@ header {
   width: 380px;
   margin-right: 12px;
   border: 1px solid rgba(255, 255, 255, 0.3);
-  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   background-color: inherit;
   color: #ffffff;
@@ -403,13 +403,16 @@ header {
   height: 44px;
   border-radius: 50%;
   background: rgba(255, 255, 255, 0.1);
-  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  trasition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-media-list .item:hover,
-.social-media-list .item:focus {
+.social-media-list .item:hover, .social-media-list .item:focus {
   background-color: #2196f3;
+}
+
+.social-media-list .item:hover .social-links-icon,
+.social-media-list .item:focus .social-links-icon {
+  fill: #ffffff;
 }
 
 .social-links-icon {
@@ -418,11 +421,6 @@ header {
   fill: #afb1b8;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.social-media-list .item:hover .social-links-icon,
-.social-media-list .item:focus .social-links-icon {
-  fill: #ffffff;
 }
 
 .social-media-links .title-white,
@@ -772,7 +770,7 @@ header {
   border-radius: 100%;
 }
 
-.modal-close-button > svg {
+.modal-close-button svg {
   margin: auto;
   width: 15px;
   height: 15px;
@@ -781,8 +779,8 @@ header {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-button:hover .modal-close-button > svg,
-.modal-close-button:focus .modal-close-button > svg {
+.modal-close-button:hover svg,
+.modal-close-button:focus svg {
   fill: #2196f3;
 }
 
@@ -790,10 +788,10 @@ header {
   display: block;
   font-weight: 700;
   font-size: 20px;
-  line-height: 1, 15;
+  line-height: 1.15;
   text-align: center;
   letter-spacing: 0.03em;
-  color: var(--title-nav-color);
+  color: #212121;
   margin-bottom: 30px;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
