--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -218,9 +218,9 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: stretch;
-      -ms-flex-align: stretch;
-          align-items: stretch;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -241,11 +241,9 @@ header {
   color: #212121;
   background-color: #f5f4fa;
   border-radius: 4px;
-  -webkit-box-shadow: none;
-          box-shadow: none;
-  border-color: #ffffff;
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border-style: var(--primary-white-color);
+  -webkit-transition: color 250ms 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover, .button:focus {
@@ -372,8 +370,8 @@ header {
   width: 380px;
   margin-right: 12px;
   border: 1px solid rgba(255, 255, 255, 0.3);
-  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   background-color: inherit;
   color: #ffffff;
@@ -439,13 +437,16 @@ header {
   height: 44px;
   border-radius: 50%;
   background: rgba(255, 255, 255, 0.1);
-  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  trasition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-media-list .item:hover,
-.social-media-list .item:focus {
+.social-media-list .item:hover, .social-media-list .item:focus {
   background-color: #2196f3;
+}
+
+.social-media-list .item:hover .social-links-icon,
+.social-media-list .item:focus .social-links-icon {
+  fill: #ffffff;
 }
 
 .social-links-icon {
@@ -454,11 +455,6 @@ header {
   fill: #afb1b8;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.social-media-list .item:hover .social-links-icon,
-.social-media-list .item:focus .social-links-icon {
-  fill: #ffffff;
 }
 
 .social-media-links .title-white,
