--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -1,24 +1,24 @@
 .advantages-list {
   display: flex;
 
-  & .item {
-    width: calc((100%-90px) / 4);
+  .item {
+    width: calc((100% - 90px) / 4);
   }
 
-  & .item:not(:last-child) {
+  .item:not(:last-child) {
     margin-right: 30px;
   }
 }
 
 .advantages {
   margin-top: 94px;
-  & p {
+  p {
     margin-top: 10px;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
   }
-  & h3 {
+  h3 {
     margin-top: 30px;
     font-size: 14px;
     line-height: 1.14;
