--- a/sass/components/_filterbuttons.scss
+++ b/sass/components/_filterbuttons.scss
@@ -1,8 +1,8 @@
 .filter-list {
-  @include display($align: stretch);
+  @include display;
   margin-top: 93px;
 
-  & li + li {
+  li + li {
     margin-left: 8px;
   }
 }
@@ -15,9 +15,8 @@
   color: $title-nav-color;
   background-color: $background-color;
   border-radius: 4px;
-  box-shadow: none;
-  border-color: $primary-white-color;
-  transition: color $transition, background-color $transition;
+  border-style: var(--primary-white-color);
+  transition: color 250ms $transition, background-color 250ms $transition;
 
   &:hover,
   &:focus {
