--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -3,7 +3,7 @@
   width: 100%;
   background: $footer-backgroung;
 
-  & .container {
+  .container {
     padding-top: 45px;
     padding-bottom: 21px;
   }
@@ -15,7 +15,7 @@
     width: 380px;
     margin-right: 12px;
     border: 1px solid rgba(255, 255, 255, 0.3);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     background-color: inherit;
     color: $primary-white-color;
@@ -42,7 +42,7 @@
   color: rgba(255, 255, 255, 0.6);
   background: none;
 
-  & span {
+  span {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
@@ -53,36 +53,35 @@
 .social-media-list {
   @include display($justify: flex-start);
 
-  & li + li {
+  li + li {
     margin-left: 10px;
   }
 
-  & .item {
+  .item {
     @include display;
     margin-top: 20px;
     width: 44px;
     height: 44px;
     border-radius: 50%;
     background: rgba(255, 255, 255, 0.1);
-    transition: background-color $transition;
-  }
+    trasition: background-color $transition;
 
-  & .item:hover,
-  & .item:focus {
-    background-color: $focus-color;
+    &:hover,
+    &:focus {
+      background-color: $focus-color;
+    }
+
+    &:hover .social-links-icon,
+    &:focus .social-links-icon {
+      fill: $primary-white-color;
+    }
   }
 }
-
 .social-links-icon {
   width: 20px;
   height: 20px;
   fill: #afb1b8;
   transition: fill $transition;
-
-  .social-media-list .item:hover &,
-  .social-media-list .item:focus & {
-    fill: $primary-white-color;
-  }
 }
 
 .social-media-links .title-white,
