--- a/css/main.css
+++ b/css/main.css
@@ -240,8 +240,8 @@ header {
 .order-service-link {
   border: none;
   border-radius: 4px;
-  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
   min-width: 200px;
   margin-top: 30px;
   padding: 10px 32px;
@@ -403,7 +403,8 @@ header {
   height: 44px;
   border-radius: 50%;
   background: rgba(255, 255, 255, 0.1);
-  trasition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-media-list .item:hover, .social-media-list .item:focus {
@@ -452,8 +453,8 @@ header {
   width: 200px;
   height: 50px;
   background-color: #2196f3;
-  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: none;
   font-weight: 700;
@@ -589,17 +590,17 @@ header {
 }
 
 .team-member {
-  width: calc((100%-90px) / 4);
+  width: calc((100% - 90px) / 4);
   padding-bottom: 35px;
   margin-right: 30px;
   background-color: #ffffff;
-  -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
-          box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
-  border-radius: 0px 0px 4px 4px;
+  -webkit-box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0 1px 3px rgba(0, 0, 0, 0.12);
+          box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0 1px 3px rgba(0, 0, 0, 0.12);
+  border-radius: 0 0 4px 4px;
 }
 
 .team-member:nth-child(4n) {
-  margin-right: 0px;
+  margin-right: 0;
 }
 
 .social-links {
@@ -648,8 +649,8 @@ header {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-links .item:hover .social-links-icon,
-.social-links .item:focus .social-links-icon {
+.item:hover .social-links-icon,
+.item:focus .social-links-icon {
   fill: #ffffff;
 }
 
@@ -672,7 +673,7 @@ header {
 
 .activities .item {
   position: relative;
-  width: calc((100%-60px) / 3);
+  width: calc((100% - 60px) / 3);
 }
 
 .activities .item:not(:last-child) {
@@ -940,7 +941,7 @@ header {
   font-family: Roboto, sans-serif;
   font-weight: 400;
   font-size: 14px;
-  line-height: 1, 7;
+  line-height: 1.7;
   color: #757575;
 }
 
@@ -986,8 +987,8 @@ header {
 .checkbox-submitt-button {
   border: none;
   border-radius: 4px;
-  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
   width: 200px;
   padding: 10px 55px;
   font-family: Roboto, sans-serif;
