--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -241,7 +241,7 @@ header {
   color: #212121;
   background-color: #f5f4fa;
   border-radius: 4px;
-  border-style: var(--primary-white-color);
+  border-style: none;
   -webkit-transition: color 250ms 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -262,8 +262,6 @@ header {
 }
 
 .projects-list h2 {
-  padding-left: 24px;
-  padding-right: 24px;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
@@ -288,17 +286,17 @@ header {
 }
 
 .project-item:nth-child(3n) {
-  margin-right: 0px;
+  margin-right: 0;
 }
 
 .project-item:nth-last-child(-n + 3) {
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
 
 .project-item > a:hover,
 .project-item > a:focus {
-  -webkit-box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
-          box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
+  -webkit-box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0 4px 4px rgba(0, 0, 0, 0.06), 0 1px 1px rgba(0, 0, 0, 0.12);
+          box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0 4px 4px rgba(0, 0, 0, 0.06), 0 1px 1px rgba(0, 0, 0, 0.12);
 }
 
 .project-text {
@@ -310,8 +308,6 @@ header {
   line-height: 1.87;
   letter-spacing: 0.03em;
   color: #757575;
-  padding-left: 24px;
-  padding-right: 24px;
 }
 
 .project-description {
@@ -437,7 +433,8 @@ header {
   height: 44px;
   border-radius: 50%;
   background: rgba(255, 255, 255, 0.1);
-  trasition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-media-list .item:hover, .social-media-list .item:focus {
@@ -486,8 +483,8 @@ header {
   width: 200px;
   height: 50px;
   background-color: #2196f3;
-  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: none;
   font-weight: 700;
