--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -64,7 +64,7 @@
     height: 44px;
     border-radius: 50%;
     background: rgba(255, 255, 255, 0.1);
-    trasition: background-color $transition;
+    transition: background-color $transition;
 
     &:hover,
     &:focus {
@@ -103,7 +103,7 @@
   width: 200px;
   height: 50px;
   background-color: $focus-color;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: none;
   font-weight: 700;
