--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -23,11 +23,12 @@
   &-link {
     border: none;
     border-radius: 4px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
     min-width: 200px;
     margin-top: 30px;
     padding: 10px 32px;
-    @include generalfont(700, 16px) line-height: 1.87;
+    @include generalfont(700, 16px);
+    line-height: 1.87;
     letter-spacing: 0.06em;
     background-color: $focus-color;
     color: $primary-white-color;
