--- a/sass/components/_our-clients.scss
+++ b/sass/components/_our-clients.scss
@@ -2,7 +2,7 @@
   margin-top: 94px;
   text-align: center;
 
-  & h2 {
+  h2 {
     font-size: 36px;
     line-height: 1.16;
     letter-spacing: 0.03em;
@@ -14,7 +14,7 @@
 .clients-list {
   @include display($align: stretch);
 
-  & .item:not(:nth-child(6n)) {
+  .item:not(:nth-child(6n)) {
     margin-right: 30px;
   }
 
