--- a/sass/components/_our-team.scss
+++ b/sass/components/_our-team.scss
@@ -4,7 +4,7 @@
   background: $background-color;
   text-align: center;
 
-  & h2 {
+  h2 {
     font-size: 36px;
     line-height: 1.16;
     letter-spacing: 0.03em;
@@ -14,19 +14,19 @@
   &-list {
     @include display($justify: flex-start);
   }
-  & img {
+  img {
     display: inline-block;
     margin-bottom: 30px;
   }
 
-  & h3 {
+  h3 {
     margin-bottom: 10px;
     @include generalfont(500, 16px);
     line-height: 1.18;
     letter-spacing: 0.03em;
   }
 
-  & p {
+  p {
     display: inline-block;
     margin-bottom: 16px;
     line-height: 1.18;
@@ -35,27 +35,27 @@
 }
 
 .team-member {
-  width: calc((100%-90px) / 4);
+  width: calc((100% - 90px) / 4);
   padding-bottom: 35px;
   margin-right: 30px;
   background-color: $primary-white-color;
-  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 1px 3px rgba(0, 0, 0, 0.12);
-  border-radius: 0px 0px 4px 4px;
+  box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0 1px 3px rgba(0, 0, 0, 0.12);
+  border-radius: 0 0 4px 4px;
 
   &:nth-child(4n) {
-    margin-right: 0px;
+    margin-right: 0;
   }
 }
 
 .social-links {
   @include display($align: stretch);
 
-  & .item:not(:last-child) {
+  .item:not(:last-child) {
     margin-right: 10px;
   }
 
-  & .item {
+  .item {
     @include display;
     width: 44px;
     height: 44px;
@@ -63,8 +63,8 @@
     transition: background-color $transition;
   }
 
-  & .item:hover,
-  & .item:focus {
+  .item:hover,
+  .item:focus {
     background-color: $focus-color;
   }
 
@@ -75,8 +75,8 @@
     transition: fill $transition;
   }
 
-  & .item:hover &-icon,
-  & .item:focus &-icon {
+  .item:hover &-icon,
+  .item:focus &-icon {
     fill: $primary-white-color;
   }
 }
